# mpboot

./: .gitignore  .gitmodules  CMakeLists.txt  aco.cpp  aco.h  alignment.cpp  alignment.h  helper.h  iqtree.cpp  iqtree.h  iqtree_config.h.in  mtree.cpp  optimization.cpp  parstree.cpp  pda.cpp  phyloanalysis.cpp  phylotree.cpp  sprparsimony.cpp  sprparsimony.h  sprparsimony2.cpp  sprparsimony2.h  stoprule.cpp  tbrparsimony.cpp  tbrparsimony.h  tbrparsimony2.cpp  tbrparsimony2.h  test.cpp  test.h  tools.cpp  tools.h  uppass.cpp  uppass.h
cmake/config/: dependencies.cmake  options.cmake
model/: modelcodon.cpp  modeldna.cpp  modeldna.h  modelfactory.cpp  modelgtr.cpp  modelgtr.h  modelprotein.cpp
ncl/: nxsstring.h
pllrepo/src/: evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  fastDNAparsimony.c  hardware.c  makenewzGenericSpecial.c  newviewGenericSpecial.c  parsimony.c  pll.h  utils.c
src/: CMakeLists.txt  alignment.cpp  alignment.h  bionj.h  instrset.h  instrset_detect.cpp  iqtree.cpp  optimization.cpp  parsmultistate.cpp  parstree.cpp  parsvect.h  pda.cpp  phylotree.cpp  phylotree.h  phylotreesse.cpp  sprparsimony.cpp  sprparsimony.h  tbrparsimony.cpp  test.h  uppass.cpp  uppass.h
src/model/: CMakeLists.txt  modelcodon.h  modelfactory.cpp  modelprotein.h
src/pllrepo/src/: CMakeLists.txt  avxLikelihood.c  globalVariables.h  hardware.c  newviewGenericSpecial.c  optimizeModel.c  parsePartition.c  pll.h  treeIO.c  utils.c
src/whtest/: CMakeLists.txt
vectorclass/: instrset.h  instrset_detect.cpp  vectorf256.h  vectori128.h  vectori256.h  vectori256e.h
