cmake_minimum_required(VERSION 3.14)

## =================================================================================================
## Setup project
## =================================================================================================
project(mpboot)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)

## =================================================================================================
## In-source building is not supported
## =================================================================================================
if (${PROJECT_SOURCE_DIR} STREQUAL ${PROJECT_BINARY_DIR})
	message(FATAL_ERROR "[MPBoot] In-source building is not supported")
endif()

## =================================================================================================
## Version number
## =================================================================================================
set(iqtree_VERSION_MAJOR 1)
set(iqtree_VERSION_MINOR 1)
set(iqtree_VERSION_PATCH 1)

## =================================================================================================
## Configuration
## =================================================================================================
include(config/options)
include(config/dependencies)

## =================================================================================================
## Main executable
## =================================================================================================
add_subdirectory(src)
